--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "firebase/app": "https://esm.sh/firebase@12.6.0/app",
+    "firebase/auth": "https://esm.sh/firebase@12.6.0/auth?deps=firebase@12.6.0",
+    "firebase/firestore": "https://esm.sh/firebase@12.6.0/firestore?deps=firebase@12.6.0",
+    "firebase/storage": "https://esm.sh/firebase@12.6.0/storage?deps=firebase@12.6.0",
+    "firebase/": "https://esm.sh/firebase@^12.6.0/"
   }
 }
 </script>
