--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
     "firebase/auth": "https://esm.sh/firebase@12.6.0/auth?deps=firebase@12.6.0",
     "firebase/firestore": "https://esm.sh/firebase@12.6.0/firestore?deps=firebase@12.6.0",
     "firebase/storage": "https://esm.sh/firebase@12.6.0/storage?deps=firebase@12.6.0",
-    "firebase/": "https://esm.sh/firebase@^12.6.0/"
+    "firebase/": "https://esm.sh/firebase@^12.6.0/",
+    "vite": "https://esm.sh/vite@^7.2.7",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
