--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
+    "react/jsx-runtime": "https://aistudiocdn.com/react@^19.2.0/jsx-runtime",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "firebase/app": "https://esm.sh/firebase@12.6.0/app",
