--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?external=react,react-dom",
     "recharts": "https://esm.sh/recharts@2.12.7?external=react,react-dom",
-    "@google/genai": "https://esm.sh/@google/genai@0.1.2",
-    "firebase/app": "https://esm.sh/firebase@10.12.0/app",
-    "firebase/auth": "https://esm.sh/firebase@10.12.0/auth?deps=firebase@10.12.0",
-    "firebase/firestore": "https://esm.sh/firebase@10.12.0/firestore?deps=firebase@10.12.0",
-    "firebase/storage": "https://esm.sh/firebase@10.12.0/storage?deps=firebase@10.12.0",
+    "@google/genai": "https://esm.sh/@google/genai@0.12.0",
+    "firebase/app": "https://esm.sh/firebase@10.13.1/app",
+    "firebase/auth": "https://esm.sh/firebase@10.13.1/auth?deps=firebase@10.13.1",
+    "firebase/firestore": "https://esm.sh/firebase@10.13.1/firestore?deps=firebase@10.13.1",
+    "firebase/storage": "https://esm.sh/firebase@10.13.1/storage?deps=firebase@10.13.1",
     "vite": "https://esm.sh/vite@5.2.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@4.2.1"
-
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@4.2.1",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "firebase/": "https://esm.sh/firebase@^12.6.0/"
   }
 }
 </script>
