--- a/index.html
+++ b/index.html
@@ -34,26 +34,24 @@
         100% { transform: translateX(100%); }
       }
     </style>
-    <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@18.3.1",
     "react-dom": "https://esm.sh/react-dom@18.3.1",
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
+
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?deps=react@18.3.1,react-dom@18.3.1",
     "recharts": "https://esm.sh/recharts@2.12.7?deps=react@18.3.1,react-dom@18.3.1",
     "lucide-react": "https://esm.sh/lucide-react@0.378.0?deps=react@18.3.1",
+
     "@google/genai": "https://esm.sh/@google/genai@0.12.0",
-    "firebase/app": "https://esm.sh/firebase@10.13.1/app",
-    "firebase/auth": "https://esm.sh/firebase@10.13.1/auth?deps=firebase@10.13.1/app",
-    "firebase/firestore": "https://esm.sh/firebase@10.13.1/firestore?deps=firebase@10.13.1/app",
-    "firebase/storage": "https://esm.sh/firebase@10.13.1/storage?deps=firebase@10.13.1/app",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js",
+    "firebase/storage": "https://www.gstatic.com/firebasejs/10.13.1/firebase-storage.js"
   }
 }
 </script>
